k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: p3x-redis-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

    # cert-manager support
    # cert-manager.io/cluster-issuer: letsencrypt

    # oauth2-proxy support
    # nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  # tls:
  # - hosts: [p3x-redis-ui.example.com]
  #   secretName: p3x-redis-ui-tls
  rules:
  - host: p3x-redis-ui.example.com
    http:
      paths:
      - backend:
          serviceName: p3x-redis-ui-service
          servicePort: 7843
